sorting keys (#358)
* sorting keys

* chore: sync openapi.json + docs
